tests/dataset/tpc-ds/compiler/c/q70.error
/tmp/TestCCompiler_TPCDS_Goldenq701142173884/001/prog.c: In function ‘test_TPCDS_Q70_simplified’:
/tmp/TestCCompiler_TPCDS_Goldenq701142173884/001/prog.c:226:7: error: incompatible types when initializing type ‘const char *’ using type ‘tmp_item_t’
  226 |       (tmp_item_t){.s_state = "TX", .s_county = "Travis", .total_sum = 20.0}};
      |       ^
/tmp/TestCCompiler_TPCDS_Goldenq701142173884/001/prog.c:229:51: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  229 |   if (test_TPCDS_Q70_simplified_result.len != tmp1.len) {
      |                                                   ^
      |                                                   ->
/tmp/TestCCompiler_TPCDS_Goldenq701142173884/001/prog.c:233:60: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  233 |       if (test_TPCDS_Q70_simplified_result.data[i3] != tmp1.data[i3]) {
      |                                                            ^
      |                                                            ->
/tmp/TestCCompiler_TPCDS_Goldenq701142173884/001/prog.c: In function ‘main’:
/tmp/TestCCompiler_TPCDS_Goldenq701142173884/001/prog.c:283:38: error: incompatible types when assigning to type ‘list_int’ from type ‘result_item_list_t’
  283 |   test_TPCDS_Q70_simplified_result = result;
      |                                      ^~~~~~
